--- a/service/templates/service/create-order.html
+++ b/service/templates/service/create-order.html
@@ -1,3 +1,4 @@
+
 {% extends 'master/layout.html' %}
 
 {% block content %}
@@ -79,7 +80,7 @@
                                                         <p>
                                                             <span class="wpcf7-form-control-wrap your-name">
 {#                                                                <input id="name" type="text" name="name" size="40" class="input1" aria-required="true" aria-invalid="false" placeholder="Логин*">#}
-                                                                <span>Когда нужно убратья: </span>{{ form.order_date }}
+                                                                <span>Когда нужно убратья: (формат: YYYY-MM-DD) </span>{{ form.order_date }}
                                                             </span>
                                                         </p>
                                                     </div>
